<resources>
    <string name="app_name">DuEnem</string>
    <string name="title_main_activity">MainActivity</string>
    <string name="title_activity_question">Question</string>

    <string name="google_play_console_web_client_id">4321504433-o70oil27u895os86gooq9rhsv0tn77p9.apps.googleusercontent.com</string>

    <string name="title_activity_sign_in">Entre em sua conta</string>
    <string name="signin_welcome_text">Bem vindo ao DuEnem.</string>
    <string name="signin_welcome_subtext">Para aproveitar o App, crie sua conta.</string>
    <string name="twitter_sign_in_button_text">Entre com o Twitter</string>
    <string name="sign_in_out">Encerrar sessão</string>

    <string name="message_sign_in_error">Não foi possível entrar.</string>
    <string name="message_play_services_error">Ops. Algum problema com a Google Play Services.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_lesson">LessonActivity</string>

    <string name="drawer_option_account">Sua Conta</string>
    <string name="drawer_option_study">Disciplinas</string>
    <string name="drawer_option_training">Treinar</string>
    <string name="drawer_option_ranking">Ranking</string>

    <string name="title_activity_ranking">Ranking</string>

    <string name="material_title">Material de Estudo %1$d</string>
    <string name="question_title">Questão %1$d</string>
    <string name="correct_answer_message">Parabéns, você acertou a questão.</string>
    <string name="incorrect_answer_message">Que pena, você errou a questão.</string>
    <string name="bt_submit_continue_message">Continuar</string>
    <string name="bt_submit_verify_message">Verificar</string>
    <string name="end_lesson_success_message">Parabéns, você terminou a lição com sucesso!!</string>
    <string name="end_lesson_fail_message">Que pena, você não acertou o suficiente\nNão desista, tente novamente!!</string>
    <string name="lesson_result_message">Vocẽ acertou %1$d de %2$d questões.</string>
    <string name="lesson_conclude">\"Parabéns, você concluiu a lição\"</string>

    <string name="title_train_activity">Treinar</string>
    <string name="refazer">Refazer</string>
    <string name="user_unauthorized_message">É necessário estar logado para usar o app.</string>

</resources>
