<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <!--Example-->
        <!--<item-->
            <!--android:id="@+id/nav_camera"-->
            <!--android:icon="@drawable/ic_menu_camera"-->
            <!--android:title="Import" />-->
        <item
            android:id="@+id/perfil"
            android:title="@string/drawer_option_account"
            android:icon="@drawable/ic_account_box_black_24dp"
            />

        <item
            android:id="@+id/materialestudo"
            android:icon="@drawable/ic_description_black_24dp"
            android:title="@string/drawer_option_study" />

        <item
            android:id="@+id/treinar"
            android:icon="@drawable/ic_timer_black_24dp"
            android:title="@string/drawer_option_training" />

        <item
            android:id="@+id/ranking"
            android:icon="@drawable/ic_trophy_24dp"
            android:title="@string/drawer_option_ranking" />

    </group>

</menu>
