<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.alpha2.duenem.signin.SignInActivity"
    tools:showIn="@layout/activity_sign_in"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleSignInBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        app:layout_constraintTop_toBottomOf="@+id/subtext"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin_welcome_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/subtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin_welcome_subtext"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/text"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/signoutBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="signoutButtonClicked"
        android:text="@string/sign_in_out"
        android:layout_marginStart="16dp"
        android:layout_marginTop="55dp"
        app:layout_constraintTop_toBottomOf="@+id/subtext"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="96dp"
        android:layout_height="96dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/subtext" />
</android.support.constraint.ConstraintLayout>
